# ExponentialMsFEM

./: .gitignore  README.md  pyproject.toml
Elliptic/: ExponentialMsFEMsolver.jl  ExponentialMsFEMutility.jl
Helmholtz/: ExponentialMsFEMsolver.jl  ExponentialMsFEMutility.jl  PDEstruct.jl
demos/: _util.py  demo_01_coefficients.py  demo_02_convergence.py  demo_03_solution.py  demo_04_method_comparison.py  demo_05_eigenvalue_decay.py  demo_06_helmholtz.py  demo_07_basis.py  demo_08_fem_vs_expmsfem.py  demo_09_perforated.py  demo_10_naca0012.py  demo_11_schrodinger.py  demo_11_wavepacket.py  demo_12_wavepacket_periodic.py  run_all.py
examples/: eg1_periodic.py  eg1_periodic_baselines.py  eg2_random.py  eg3_highcontrast.py  eg_helm.py
expmsfem/: __init__.py  assembly.py  baselines.py  coefficients.py  driver.py  element_basis.py  errors.py  fem.py  local_ops.py  mesh.py  q1.py  reconstruct.py
expmsfem/helmholtz/: __init__.py  assembly.py  coefficients.py  driver.py  element_basis.py  fem.py  local_ops.py  q1.py
expmsfem/schrodinger/: __init__.py  driver.py  element_basis.py  fem.py  local_ops.py  potentials.py  time_dep.py
tests/: test_assembly.py  test_baselines.py  test_convergence.py  test_element_basis.py  test_fem.py  test_helmholtz_convergence.py  test_helmholtz_local_ops.py  test_helmholtz_primitives.py  test_local_ops.py  test_primitives.py  test_schrodinger.py  test_schrodinger_time.py
